--- a/wings/webd/webd.css
+++ b/wings/webd/webd.css
@@ -694,6 +694,7 @@ nav{
     .fa-bars{
         padding-right: 0px;
         transform: scale(1.2);
+        color: #13F7D2;
     }
 
     .navbar-nav a::before{
@@ -716,11 +717,12 @@ nav{
     }
 
     .intro-header{
-        padding-top: 150px;
+        text-align: center;
+        padding-top: 110px;
     }
 
     .intro-header p{
-        font-size: 17px;
+        font-size: 12px;
     }
 
     .intro-header .heading{
@@ -729,7 +731,7 @@ nav{
     }
 
     .webd-logo img{
-        margin-top: 100px;
+        margin-top: 10px;
     }
 
     .announcements p{
